# programmiersprachen-raytracer

SDF/: materials.sdf
framework/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Material.hpp  ambiente.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  hitpoint.hpp  imageplane.hpp  light.hpp  plane.hpp  pyramide.cpp  pyramide.hpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
source/: CMakeLists.txt  main.cpp  raytracer.cpp  tests.cpp
